README updated, folder code created for all the notebooks

--- a/code/EDA_Models.ipynb
+++ b/code/EDA_Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies = pd.read_csv('data/movies_raw.csv', lineterminator='\\n')\n",
-    "books = pd.read_csv('data/books_raw.csv',lineterminator='\\n')"
+    "movies = pd.read_csv('../data/movies_raw.csv', lineterminator='\\n')\n",
+    "books = pd.read_csv('../data/books_raw.csv',lineterminator='\\n')"
    ]
   },
   {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1166,12 +1166,12 @@
       "text/plain": [
        "{'max_depth': 5,\n",
        " 'max_features': 'auto',\n",
-       " 'min_samples_leaf': 3,\n",
+       " 'min_samples_leaf': 2,\n",
        " 'min_samples_split': 5,\n",
        " 'n_estimators': 150}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,16 +1182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6157973546293986, 0.6141861937935402)"
+       "(0.620539056650861, 0.6186193793540216)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,13 +1206,6 @@
    "source": [
     "This is obviously not a good model. Only barely better than the base model. So we will be using the Multinomial Naive Bayes with CV"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
