--- a/code/download_data.ipynb
+++ b/code/download_data.ipynb
@@ -801,7 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies.to_csv('./project_3/data/movies_raw.csv')"
+    "movies.to_csv('../data/movies_raw.csv')"
    ]
   },
   {
@@ -1544,7 +1544,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books.to_csv('./project_3/data/books_raw.csv')"
+    "books.to_csv('../data/books_raw.csv')"
    ]
   }
  ],
